php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26911 sqlite crashes fetching data from an empty query
Submitted: 2004-01-14 16:04 UTC Modified: 2004-01-14 16:14 UTC
From: ilia@php.net Assigned:
Status: Closed Package: Reproducible crash
PHP Version: Irrelevant OS: Any
Private report: No CVE-ID: None
 [2004-01-14 16:04 UTC] ilia@php.net
Description:
------------
Sqlite crashes while trying to fetch data from an empty 
query. 

Reproduce code:
---------------
<?php
$db = sqlite_open(":memory:");
$a = sqlite_query($db, "  ");
?>

Expected result:
----------------
 


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-01-14 16:14 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC