MFH: Fixed bug #26911 (crash in sqlite extension when fetching data from empty queries).